# RaytracingInAWeekend

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakesettings.json  README.md
src/: CMakeLists.txt  bitmap.cpp  bitmap.h  camera.h  color.h  main.cc  main.cpp  main.cu  material.cc  material.h  ray.h  sphere.cc  sphere.h  util.h  vec3.cc  vec3.h  world.cc  world.h
src/Raytracing/: CMakeLists.txt  bitmap.h  material.h  sphere.cc  vec3.h
